ranking by points

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             <!-- <th>Puntos</th> -->
             <th>PJ</th>
             <th>PG</th>
+            <th>Puntos</th>
           </thead>
         </table>
       </div>
@@ -99,10 +100,10 @@
               <div class="player-card-info">
                 <h6 class="mb-1"><strong class="" id="menu-player-username"></strong></h6>
                 <div id="menu-player-stats">
-                  <span><strong>Partidas: </strong><span id='menu-player-stats-games'>
+                  <span><strong>PG(PJ): </strong><span id='menu-player-stats-games'>
                   </span>
                   <!-- (<span id='menu-player-stats-wins'></span>)</span> -->
-                  <span><strong>Victorias: </strong><span id='menu-player-stats-mmr'></span></span>
+                  <span><strong>Puntos: </strong><span id='menu-player-stats-points'></span></span>
                 </div>
               </div>
             </div>
