undone table responsive ranking

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
       </div>
     </div> -->
     <div class="row justify-content-center">
-      <div class="col col-md-9 col-lg-6 text-center justify-content-center" id="menu-ranking">
+      <div class="col col-md-9 col-lg-6 text-center" id="menu-ranking">
         <h3 class="mb-1 white">Ranking</h3>
-        <table class="table justify-content-center table-responsive" id="ranking-tabla">
+        <table class="table" id="ranking-tabla">
           <thead>
             <th>Rank</th>
             <!-- <th></th> -->
