--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
             <th>P</th>
           </thead>
         </table>
+        <div class="white dv-old-rankings">
+          Rankings pasados
+          <div>
+            <span><a href="https://firebasestorage.googleapis.com/v0/b/mango-bot.appspot.com/o/lie_historial%2F2017-12-Ranking.jpg?alt=media&token=a9e292ab-6e01-4a7e-bcea-536e2bae2c47" target="_blank">Diciembre 2017 (No oficial)</a></span>
+          </div>
+        </div>
       </div>
     </div>
     <div class="row justify-content-center text-center hide" id="menu-player">
